<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crazy Tip Calculator</string>
    <string name="action_settings">Settings</string>

    <string name="bill_text_view">Bill</string>
    <string name="bill_edit_text">0.0</string>

    <string name="tip_text_view">Tip</string>
    <string name="tip_edit_text">0.15</string>

    <string name="final_text_view">Final Bill</string>
    <string name="final_edit_text">0</string>

    <string name="change_tip_text_view">Change Tip</string>

    <string name="intro_text_view">Introduction</string>
    <string name="intro_friendly_text_view">Friendly</string>
    <string name="intro_special_text_view">Special</string>
    <string name="intro_opinion_text_view">Opinion</string>

    <string name="availability_text_view">Availability</string>
    <string name="availability_bad_radiobutton">Bad</string>
    <string name="availability_ok_radiobutton">Ok</string>
    <string name="availability_good_radiobutton">Good</string>

    <string-array name="problem_solving">
        <item>Problem Solving</item>
        <item>Bad</item>
        <item>Ok</item>
        <item>Good</item>
    </string-array>
    
    <string name="time_waiting_text_view">Time Waiting for Service</string>
    <string name="start_chronometer_button">Start</string>
    <string name="pause_chronometer_button">Pause</string>
    <string name="reset_chronometer_button">Reset</string>






</resources>
